0.12.4
======
 * Fixed --cdimage and --dvdimage parameters.
 * Fixed the file browser menu. Now it contains the bookmarks and "add to project" actions again.
	
0.12.3
======
 * Ignore dock config from K3b versions older than 0.12
 * Do not delete DVD project iso image if "remove image" is unchecked.
 * Properly load multisession default settings.
 * Update device selection boxes when devices are added or removed via HAL.
 * Properly cancel DVD project writing.
 * Fixed DVD+RW session import

0.12.2
======
 * After for example copying a CD when the dialog comes up again keep the last settings.
 * Default to incremental sequential writing mode when copying a DVD to a DVD-R.
 * Fixed a crash when the DVD copy dialog is reused.
 * Fixed inline editing in the audio CD view (without bigger changes this only works with a 
   rather strange selection mode.)
 * Show the configured splash screen image instead of the default.
 * Fixed eMovix 0.9 default settings handling.
 * Import session: disable RockRidge if the previous session does not contain RR extensions.
   This fixes the problem with strange filenames if the new session is mounted via RR.
 * Fixed the --cdimage parameter.
 * Changed max copies from 99 to 999.
 * Improved session import dialog.
 * Properly default to DVD size in Video DVD project.
 * Fixed automatic multisession handling for DVD+RW media.
 * Fixed handbook installation.
 * Fixed HAL backend: devices are properly removed now.
 * Ignore K3b Themes that do not follow the new filename scheme.

0.12.1
Fixed compilation problems with older musepack library version.
Fixed compile problem with older gcc versions.
Enable verification checkbox for ISO9660 images in the CD writing dialog.
Do not report success even if audio project conversion failed.

0.12
Added "Mpeg Still" support to Video-CD Project
FreeBSD support (thanks to Adriaan De Groot)
Support for all global CD-Text fields with cdrecord.